--- a/src/pages/posts/[...page].astro
+++ b/src/pages/posts/[...page].astro
@@ -42,8 +42,8 @@ const description =
 <Base head={{ title, description }}>
   <Section>
     <PaginationHeader
-      title='Random title here'
-      description='Lorem ipsum dolor sit amet, consectetur adipiscing elit.'
+      title='Programación'
+      description='Aprende a programar'
     />
   </Section>
 
