--- a/src/components/Application.css
+++ b/src/components/Application.css
@@ -1,3 +1,26 @@
 .test {
     background-color: antiquewhite;
 }
+
+.title {
+    width: 100%;
+    display: flex;
+    flex-flow: row;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.cards {
+    width: 100%;
+    display: flex;
+    flex-flow: row;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.wrapper {
+    height: 100%;
+    padding-top: 4.4rem;
+}
